# chrome-devtools-cloud-migration-lab

./: MODULE_INDEX.md  README.md  ROADMAP.md
.github/workflows/: repo-guardrails.yml
codelab/: index.lab.md
docs/: DEVTOOLS_VERIFICATION_GUIDE.md  GUARDRAILS.md  HEALTH_ECOSYSTEM_BOUNDARIES.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.md
docs/research/: CHROME_SOURCE_PRIORITY_FOR_SENSITIVE_REPOS.md  GOOGLE_DEVELOPER_LEARNING_TO_PORTFOLIO_ROADMAP.md
experiments/module-09-pwa-demo/: README.md  app.js  index.html  manifest.json  styles.css  sw.js
experiments/module-10-security-demo/: README.md  app.js  index.html  server.py  styles.css
experiments/module-11-accessibility-demo/: README.md  index.html
experiments/module-12-sources-debugging-demo/: app.js
experiments/module-21-kaggle-vibe-coding/: Dockerfile  README.md  app.py
experiments/module-21-kaggle-vibe-coding/expense-approval-agent/: .agents-cli-spec.md  README.md  agents-cli-manifest.yaml  pyproject.toml
experiments/module-21-kaggle-vibe-coding/expense-approval-agent/app/: agent.py
experiments/module-21-kaggle-vibe-coding/expense-approval-agent/tests/unit/: test_expense_workflow.py
gae-flask-module-1/mod0-baseline/: README.md
gae-flask-module-1/mod1-flask/: README.md
gae-flask-module-1/mod2-cloud-ndb/: README-module-02.md
gae-flask-module-1/mod3-cloud-datastore/: README-module-03.md
gae-flask-module-1/mod4-cloud-run-docker/: .dockerignore  Dockerfile  README-module-04.md  main.py  (+1 more)
templates/: DEVTOOLS_CHECKLIST_TEMPLATE.md  MODULE_README_TEMPLATE.md
(+87 files in other folders)
